--- a/ansible/roles/common/vars/main.yaml
+++ b/ansible/roles/common/vars/main.yaml
@@ -5,14 +5,22 @@ admins:
     - name: "{{ vault_dungnm_name }}"
       passwd: "{{ vault_dungnm_passwd }}"
       full_name: "{{ vault_dungnm_full_name }}"
+    - name: "{{ vault_thuandd_name }}"
+      passwd: "{{ vault_thuandd_passwd }}"
+      full_name: "{{ vault_thuandd_full_name }}"
+    - name: "{{ vault_longdv_name }}"
+      passwd: "{{ vault_longdv_passwd }}"
+      full_name: "{{ vault_longdv_full_name }}"
   cmd_alias: |
     Cmnd_Alias  SHUTDOWN = /sbin/halt, /sbin/shutdown, /sbin/poweroff, /sbin/reboot, /sbin/init, /sbin/telinit
-    Cmnd_Alias  NSHELLS = /bin/sh, /bin/bash, /sbin/nologin, /bin/tcsh, /bin/csh, /bin/zsh, /bin/ksh
-    Cmnd_Alias  NSU = /bin/su 
+    Cmnd_Alias  SHELLS = /bin/sh, /bin/bash, /sbin/nologin, /bin/tcsh, /bin/csh, /bin/zsh, /bin/ksh
+    Cmnd_Alias  SU = /bin/su 
     Cmnd_Alias  NDD = /bin/dd 
-    Cmnd_Alias  NLESS = /usr/bin/less
-    Cmnd_Alias  NVISUDO = /usr/sbin/visudo
-  cmd: ALL=(ALL) ALL, !NSHELLS, !NSU, !NVISUDO, !SHUTDOWN, !NDD, !NLESS
+  cmd: ALL=(ALL) ALL, !SHELLS, !SU, !SHUTDOWN, !NDD
+
+root:
+  name: "{{ vault_root_name }}"
+  recovery_passwd: "{{ vault_root_recovery_passwd }}"  
 
 nameservers: |
    nameserver 8.8.8.8
@@ -43,13 +51,13 @@ os:
     version7: 7
     version6: 6
     version5: 5
+
+pip_url: https://bootstrap.pypa.io/get-pip.py
      
 packages:
    - gcc
    - gcc-c++
    - python-devel
-   - mariadb-devel
-   - mariadb
    - openssl-devel
    - zlib-devel
    - wget
@@ -69,3 +77,4 @@ packages:
    - net-tools 
    - tmux
    - tcpdump
+   - ncdu
