--- a/ansible/inventories/staging/group_vars/all/vars.yaml
+++ b/ansible/inventories/staging/group_vars/all/vars.yaml
@@ -2,12 +2,12 @@ ansible_connection: ssh
 #ansible_port: 22
 
 ### For fresh servers
-#ansible_ssh_user: "{{ vault_default_ansible_ssh_user }}"
-#ansible_ssh_pass: "{{ vault_default_ansible_ssh_pass }}"
+ansible_ssh_user: "{{ vault_default_ansible_ssh_user }}"
+ansible_ssh_pass: "{{ vault_default_ansible_ssh_pass }}"
 
 ### For running servers
-ansible_ssh_user: "{{ vault_ansible_ssh_user }}"
-ansible_become_pass: "{{ vault_ansible_ssh_pass }}"
+#ansible_ssh_user: "{{ vault_ansible_ssh_user }}"
+#ansible_become_pass: "{{ vault_ansible_ssh_pass }}"
 
 ### For modifying on existing servers
 #ansible_ssh_user: "{{ vault_init_ansible_ssh_user }}"
