--- a/ansible/inventories/staging/group_vars/all/vars.yaml
+++ b/ansible/inventories/staging/group_vars/all/vars.yaml
@@ -2,12 +2,12 @@ ansible_connection: ssh
 #ansible_port: 22
 
 ### For fresh servers
-ansible_ssh_user: "{{ vault_default_ansible_ssh_user }}"
-ansible_ssh_pass: "{{ vault_default_ansible_ssh_pass }}"
+#ansible_ssh_user: "{{ vault_default_ansible_ssh_user }}"
+#ansible_ssh_pass: "{{ vault_default_ansible_ssh_pass }}"
 
 ### For running servers
-#ansible_ssh_user: "{{ vault_ansible_ssh_user }}"
-#ansible_become_pass: "{{ vault_ansible_ssh_pass }}"
+ansible_ssh_user: "{{ vault_ansible_ssh_user }}"
+ansible_become_pass: "{{ vault_ansible_ssh_pass }}"
 
 ### For modifying on existing servers
 #ansible_ssh_user: "{{ vault_init_ansible_ssh_user }}"
@@ -17,3 +17,12 @@ ansible_ssh_pass: "{{ vault_default_ansible_ssh_pass }}"
 ### becoming to root
 ansible_become: true
 ansible_become_method: sudo
+
+default_admin_users:
+  - name: "{{ vault_dungnm_name }}"
+    passwd: "{{ vault_dungnm_passwd }}"
+    full_name: "{{ vault_dungnm_full_name }}"
+
+default_root_user:
+  name: "{{ vault_root_name }}"
+  recovery_passwd: "{{ vault_root_recovery_passwd }}"
