--- a/ansible/roles/common/tasks/main.yaml
+++ b/ansible/roles/common/tasks/main.yaml
@@ -112,7 +112,7 @@
     generate_ssh_key: yes
     ssh_key_bits: 2048
     ssh_key_file: .ssh/id_rsa
-  with_items: "{{ admins.users }}"
+  with_items: "{{ admin_users }}"
 
 - name: Check if filter user in sshd 
   command: grep -Fq "AllowUsers" /etc/ssh/sshd_config
@@ -127,7 +127,7 @@
     line: 'AllowUsers {{ item.name }}'
     state: present 
     validate: '/usr/sbin/sshd -T -t -f %s'
-  with_items: "{{ admins.users }}"
+  with_items: "{{ admin_users }}"
   when: check_sshd.rc == 0
 
 - name: Restart sshd
