--- a/ansible/roles/nginx_webserver/tasks/main.yaml
+++ b/ansible/roles/nginx_webserver/tasks/main.yaml
@@ -50,7 +50,6 @@
 
 - name: Update config nginx global
   template: src=nginx.conf.j2 dest="{{ nginx_installation.dir }}/conf/nginx.conf" backup=yes
-  notify: restart and enable nginx
 
 - name: Create link to binary
   file: 
@@ -63,7 +62,12 @@
   when:
     - ansible_distribution == "{{ os.distribution_centos.name }}"
     - ansible_distribution_major_version == "{{ os.distribution_centos.version7 }}"
-  notify: restart and enable nginx
+
+- name: restart and enable nginx
+  systemd: name=nginx.service enabled=yes daemon_reload=yes state=restarted
+  when:
+    - ansible_distribution == "{{ os.distribution_centos.name }}"
+    - ansible_distribution_major_version == "{{ os.distribution_centos.version7 }}"
 
 - name: Install vhosts
   include: vhosts.yaml
