--- a/ansible/inventories/staging/hosts.yaml
+++ b/ansible/inventories/staging/hosts.yaml
@@ -1,4 +1,4 @@
 [test]
-test2 ansible_host=192.168.10.122 hostname=test2 
+test2 ansible_host=192.168.10.122 hostname=test2 use_processor=1
 test3 ansible_host=192.168.10.123 hostname=test3 role=proxy_cache
 test4 ansible_host=192.168.10.124 hostname=test4 role=proxy_cache
