--- a/ansible/inventories/staging/group_vars/test/vars.yaml
+++ b/ansible/inventories/staging/group_vars/test/vars.yaml
@@ -29,3 +29,30 @@ default_nginx_vhosts:
     cache_dir: /data/nginx/cache/hotel
     cache_name: hotel_cache
     proxy_cache_path: /data/nginx/cache/hotel levels=1:2 keys_zone=hotel_cache:10m max_size=1g inactive=60m use_temp_path=off
+
+  - service_name: shopping_cart
+    name: "shopping_cart.example.com"
+    listen: 80
+    server_name: "shopping_cart.example.com"
+    index: "index.php index.html index.php"
+    log_dir: "{{ nginx_conf.log_dir }}/shopping_cart.example.com"
+    access_log: "{{ nginx_conf.log_dir }}/shopping_cart.example.com/access.log"
+    error_log: "{{ nginx_conf.log_dir }}/shopping_cart.example.com/error.log"
+    root: "/var/www/shopping_cart.example.com"
+    locations: |
+      location ~ \.php$ {
+        fastcgi_pass {{ default_php_fpm_unix }};
+        fastcgi_index index.php;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        include {{ nginx_installation.dir }}/conf/fastcgi_params;
+      }
+    upstream:
+      name: shopping_cart
+      content: |
+        upstream shopping_cart { 
+          server 192.168.10.122:80;
+        }       
+    cache_dir: /data/nginx/cache/shopping_cart
+    cache_name: shopping_cart_cache
+    proxy_cache_path: /data/nginx/cache/shopping_cart levels=1:2 keys_zone=shopping_cart_cache:10m max_size=1g inactive=60m use_temp_path=off
+
