--- a/ansible/roles/pmm/tasks/main.yaml
+++ b/ansible/roles/pmm/tasks/main.yaml
@@ -2,10 +2,8 @@
   tags: include
 
 - name: Copy pmm client script
-  template: src=deploy_pmm_client.sh.j2 dest=/tmp/deploy_pmm_client.sh mode=0744 owner=root group=root
+  template: src=deploy_pmm_client.sh.j2 dest=/tmp/deploy_pmm_client.sh mode=0740 owner=root group=root
 
+# Impossible to run install pmm client via ansible
 - name: Install pmm client
   command: /tmp/deploy_pmm_client.sh
-  
-  
-
