--- a/app/flask-intro/requirements.txt
+++ b/app/flask-intro/requirements.txt
@@ -16,6 +16,7 @@ pathlib2==2.2.1
 pexpect==4.2.1
 pickleshare==0.7.4
 prompt-toolkit==1.0.9
+psycopg2==2.6.2
 ptyprocess==0.5.1
 Pygments==2.2.0
 pyparsing==2.1.10
